// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`redraw render snapshot of a medium map renders the loaded map 1`] = `
{
  "canvas": "ee261e35c91e",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=74ec918771de line=da39a3ee5e6b",
  "topic 1": "pos=127,-358.5 size=71x38 order=0 group=162c190a3cd4 line=14465d00ae9e",
  "topic 10": "pos=345.5,-336 size=86x34 order=0 group=a88d627b1c49 line=ca9c29b657b7",
  "topic 11": "pos=362.5,-279.5 size=120x59 order=1 group=d70271fc6d54 line=9f1a5678f79b",
  "topic 12": "pos=244.5,-201 size=104x47 order=2 group=56a8f8077ac9 line=3e2ab23edb2e",
  "topic 13": "pos=429.5,-223 size=206x34 order=0 group=5ad17c81c38e line=d1b8ffed00d3",
  "topic 14": "pos=361,-179 size=69x34 order=1 group=57929f33ee6f line=758c5d149d80",
  "topic 15": "pos=-139.5,-368.5 size=96x74 order=1 group=8771e221e1cf line=bd8ab79b64a2",
  "topic 16": "pos=-269.5,-469 size=104x47 order=0 group=6e1264aff73b line=8ff79eea0f78",
  "topic 17": "pos=-386,-519.5 size=69x34 order=0 group=907bb2cdb61b line=d59a09964cdd",
  "topic 18": "pos=-403,-447 size=103x34 order=1 group=4c7ce6c71b95 line=090bbce2020c",
  "topic 19": "pos=-519,-475.5 size=69x34 order=0 group=10e2070d2712 line=cfebc4cb2865",
  "topic 2": "pos=224,-459 size=63x34 order=0 group=2dbb78a7acda line=4f503fe43297",
  "topic 20": "pos=-536.5,-425 size=104x47 order=1 group=4ed1e6b14b7b line=9413fa28a031",
  "topic 21": "pos=-252,-340 size=69x34 order=1 group=9602c81889d1 line=095d7fb4283b",
  "topic 22": "pos=-376.5,-362 size=120x59 order=0 group=16651a49078b line=bd7503a81e31",
  "topic 23": "pos=-419.5,-305.5 size=206x34 order=1 group=cf50774cc4b4 line=1ce7ec5be22a",
  "topic 24": "pos=-278,-239.5 size=121x47 order=2 group=1427df8aaa77 line=ff5bdbeb7750",
  "topic 25": "pos=-411.5,-261.5 size=86x34 order=0 group=9fd7db824ca8 line=873d14f9a3a7",
  "topic 26": "pos=-403,-217.5 size=69x34 order=1 group=331f04434633 line=da673a495ebc",
  "topic 27": "pos=139.5,28.5 size=96x38 order=2 group=30ed818bcb29 line=ca5bbb98e3c7",
  "topic 28": "pos=261,-84.5 size=87x47 order=0 group=3e3afbd7ea1f line=97ff92749764",
  "topic 29": "pos=369,-135 size=69x34 order=0 group=9a996bf8bf76 line=6cd23da98ee3",
  "topic 3": "pos=385.5,-509.5 size=200x34 order=0 group=e26bd8ae0b06 line=ee43cfc7eb24",
  "topic 30": "pos=386,-62.5 size=103x34 order=1 group=c8698f7f42d8 line=116953992434",
  "topic 31": "pos=502,-91 size=69x34 order=0 group=06b8bbad03eb line=821a37786d39",
  "topic 32": "pos=519.5,-40.5 size=104x47 order=1 group=ebfc6dfddce6 line=4a3673ec52c9",
  "topic 33": "pos=396.5,57 size=358x59 order=1 group=41c541cb0b87 line=301638453957",
  "topic 34": "pos=665.5,22.5 size=120x59 order=0 group=457a43d1593f line=e6aa36264a65",
  "topic 35": "pos=680.5,91.5 size=150x59 order=1 group=7873e37247e4 line=deed6ed9cf5c",
  "topic 36": "pos=278,170 size=121x47 order=2 group=e75524df89eb line=315b87af4910",
  "topic 37": "pos=403,148 size=69x34 order=0 group=18e69449d71a line=d780ccedfd88",
  "topic 38": "pos=403,192 size=69x34 order=1 group=e3cdccf1c04e line=990e70b0b59d",
  "topic 39": "pos=-130.5,-17.5 size=78x38 order=3 group=d6ad14c85967 line=b15eec4ebde8",
  "topic 4": "pos=559,-531.5 size=87x47 order=0 group=594787a38734 line=c4c37fa6db29",
  "topic 40": "pos=-260,-105.5 size=121x47 order=0 group=120250e021fb line=38dafdbb02a3",
  "topic 41": "pos=-385,-173.5 size=69x34 order=0 group=2a39ffcb6ae0 line=12fad9f6cb1f",
  "topic 42": "pos=-393.5,-83.5 size=86x34 order=1 group=7c04b81ea01f line=db9a524e2c5e",
  "topic 43": "pos=-569.5,-129.5 size=206x34 order=0 group=7ff50b955479 line=11ec862c0264",
  "topic 44": "pos=-542,-61.5 size=151x82 order=1 group=f9422e124969 line=a70475ae2e14",
  "topic 45": "pos=-251,28.5 size=103x34 order=1 group=2d07dffe6a88 line=0a3fb02d8698",
  "topic 46": "pos=-367,6.5 size=69x34 order=0 group=374ffad38662 line=a46b7d563401",
  "topic 47": "pos=-367,50.5 size=69x34 order=1 group=81483f00e3c5 line=2b081686fae3",
  "topic 48": "pos=-260,116.5 size=121x47 order=2 group=8abc5338ca57 line=229920412820",
  "topic 49": "pos=-385,94.5 size=69x34 order=0 group=613a4aa2432a line=5d6b493ee4f3",
  "topic 5": "pos=555.5,-481 size=80x34 order=1 group=8dff3d9706b6 line=379f08a83b76",
  "topic 50": "pos=-393.5,138.5 size=86x34 order=1 group=48fa2ed431bb line=f9f71dd8fe5b",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=7773ea4733a6 line=da39a3ee5e6b",
  "topic 51": "pos=130.5,387 size=78x38 order=4 group=039176e6d70f line=9f9c75bb6aa8",
  "topic 52": "pos=243,299 size=87x47 order=0 group=8a87014d1842 line=fcafa6c2f3dd",
  "topic 53": "pos=419.5,236 size=206x34 order=0 group=5289bc489704 line=e0aa863949c2",
  "topic 54": "pos=368,321 size=103x34 order=1 group=12cdbd266422 line=9323b25729c5",
  "topic 55": "pos=524.5,292.5 size=150x59 order=0 group=f8ffd8cd49fe line=c73273f5cfc0",
  "topic 56": "pos=501.5,355.5 size=104x47 order=1 group=c129559a8196 line=0520e06a1145",
  "topic 57": "pos=234,428 size=69x34 order=1 group=2b7cb5598607 line=031365d91b32",
  "topic 58": "pos=333,406 size=69x34 order=0 group=7fb431412bdf line=4676d5f908dc",
  "topic 59": "pos=333,450 size=69x34 order=1 group=23b6c6ef4e5c line=a48dc8c10ae1",
  "topic 6": "pos=325.5,-408.5 size=80x34 order=1 group=0530f0efef7d line=0b91bee6ed96",
  "topic 60": "pos=260,516 size=121x47 order=2 group=5a11d92eeb87 line=2a5db2154439",
  "topic 61": "pos=385,494 size=69x34 order=0 group=3a8320657264 line=1709c0452e2c",
  "topic 62": "pos=385,538 size=69x34 order=1 group=c6041fc69d3c line=f6ac278e7c4e",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=af2511baa3b8 line=8761c60f26b6",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=7c573952e83b line=37ede42beae8",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=58dec10bbed8 line=f2b6e580e209",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=46738580edd2 line=2283c269a934",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=1209376b7203 line=f84e6f8bc1ae",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=805cbf1cc553 line=1882af4c714e",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=0f6bd3c5a4f1 line=e926bbc52454",
  "topic 7": "pos=427,-437 size=63x34 order=0 group=789b6423bad5 line=1de3ff0b54b2",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=3df498366217 line=3d0050f48def",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=2e46b712727a line=7326c1f7aae2",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=4e5540e5b5ab line=35a24638b9da",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=2e7d16d40b5c line=174629ac4be6",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=fdda0f57ae0a line=83694791f45f",
  "topic 8": "pos=447.5,-386.5 size=104x47 order=1 group=19d69327e257 line=52fab0052e24",
  "topic 9": "pos=232.5,-301.5 size=80x64 order=1 group=ba07ee830159 line=5de042427663",
}
`;

exports[`redraw render snapshot of a medium map renders the same after changing the theme: prism 1`] = `
{
  "canvas": "5d06632b4c58",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=cda20a02aff1 line=da39a3ee5e6b",
  "topic 1": "pos=154.5,-358.5 size=126x68 order=0 group=46a0f173670d line=6ea12aa97c6d",
  "topic 10": "pos=572.5,-315.5 size=272x68 order=0 group=badf85dc8482 line=cae3f994797b",
  "topic 11": "pos=496.5,-216.5 size=120x110 order=1 group=41edf4907b56 line=8ab408806f38",
  "topic 12": "pos=350.5,-78.5 size=206x93 order=2 group=d49b639e6f53 line=c7b1d6b22bb1",
  "topic 13": "pos=688,-117.5 size=409x68 order=0 group=56e472c14f38 line=1ef6404c5f52",
  "topic 14": "pos=552,-39.5 size=137x68 order=1 group=a25a46061fa0 line=3bdb56443f48",
  "topic 15": "pos=139.5,172.5 size=96x74 order=2 group=6d54ce28d19a line=d24d7a389179",
  "topic 16": "pos=269.5,72 size=104x47 order=0 group=8950f82f67c8 line=7cb5806ca461",
  "topic 17": "pos=386,21.5 size=69x34 order=0 group=5c2542424fe2 line=292e5c5c0319",
  "topic 18": "pos=403,94 size=103x34 order=1 group=fb5bd45c06ae line=b34343c7430d",
  "topic 19": "pos=519,65.5 size=69x34 order=0 group=c13f3695b4e4 line=85eed995cfb5",
  "topic 2": "pos=375.5,-535.5 size=256x93 order=0 group=467b08eca039 line=2c96979a324d",
  "topic 20": "pos=536.5,116 size=104x47 order=1 group=fab198caaddf line=d0494b117a9a",
  "topic 21": "pos=252,201 size=69x34 order=1 group=b64f41bbd9f8 line=084413dc12d1",
  "topic 22": "pos=376.5,179 size=120x59 order=0 group=77ef640d0a7b line=49adce2f86c1",
  "topic 23": "pos=419.5,235.5 size=206x34 order=1 group=cf23a9ab5712 line=c7f4be5dc597",
  "topic 24": "pos=278,301.5 size=121x47 order=2 group=e60f5f617fec line=42522055d691",
  "topic 25": "pos=411.5,279.5 size=86x34 order=0 group=702b406064bc line=25defb1479c8",
  "topic 26": "pos=403,323.5 size=69x34 order=1 group=795a656705dc line=ba5e2383e437",
  "topic 27": "pos=139.5,531 size=96x38 order=4 group=6abd65ab3084 line=fba3a2e567fc",
  "topic 28": "pos=261,418 size=87x47 order=0 group=1a4d06104467 line=dc4d61403d62",
  "topic 29": "pos=369,367.5 size=69x34 order=0 group=7b155297490e line=d111c42e99f9",
  "topic 3": "pos=673,-626 size=279x68 order=0 group=492ed370a383 line=a13b2a0b8b0c",
  "topic 30": "pos=386,440 size=103x34 order=1 group=978ab6f8426a line=aa679faef45b",
  "topic 31": "pos=502,411.5 size=69x34 order=0 group=4c558d5f1c55 line=12694a6086c5",
  "topic 32": "pos=519.5,462 size=104x47 order=1 group=6eb2769310e9 line=b56324b35cec",
  "topic 33": "pos=396.5,559.5 size=358x59 order=1 group=6092c8c59bd5 line=7f3b946bf3df",
  "topic 34": "pos=665.5,525 size=120x59 order=0 group=3ab35310575c line=5617841a231d",
  "topic 35": "pos=680.5,594 size=150x59 order=1 group=2c60d6364146 line=40fe0daf1420",
  "topic 36": "pos=278,672.5 size=121x47 order=2 group=ebeea67bc8a1 line=3ed6c7a8b922",
  "topic 37": "pos=403,650.5 size=69x34 order=0 group=8ccf0d9c6178 line=3f9c549b66b2",
  "topic 38": "pos=403,694.5 size=69x34 order=1 group=3ad6e548a30d line=1360e6e5a97f",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=c83eb35005ef line=9e1c43a9dafc",
  "topic 4": "pos=929,-665 size=173x93 order=0 group=986861ebaa6d line=de1497e71722",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=ba6aa44e34dd line=2ca680ad4ac3",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=5cec96ef243d line=c01657f1f032",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=843d83868f3c line=362f559f6838",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=6c7996f46708 line=df7121932047",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=593ef972d2a1 line=bfb48921b42f",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=12e73c9c2cc1 line=c2eb270406b8",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=f6b964bc6499 line=38c0e60f4993",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=ae587c9e4155 line=8f8d05511c38",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=2a636c329e7f line=5cdd4b8ceac7",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=75542821b117 line=90da39a3f710",
  "topic 5": "pos=922,-574.5 size=159x68 order=1 group=afa4059305c9 line=a720033d6434",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=c91d9aa3ec43 line=38459de63849",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=a93672263858 line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=dfa299e30a32 line=7f4c5696cc3c",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=5f8da694bd5d line=9515fe389332",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=5241a36c697d line=7ef1e5e71f58",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=81888f812786 line=7a54ca9ba9fe",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=6550e95aaa89 line=f9d77a1bfc8c",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=1ed4b75bb273 line=9ce71ff80d81",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=8e41997b2ac9 line=4765955ad45d",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=ea3fc6075c39 line=0525849dfa31",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=76c8242c09e1 line=03765c81a874",
  "topic 6": "pos=613,-445 size=159x68 order=1 group=072d45831b7c line=3bc2584f3f00",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=018794702ee3 line=761ff9f3e3f1",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=56aaa364f33a line=64fafbb55ff8",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=36818566c232 line=5a785fc5d6e5",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=27f677e5125a line=2331792e11b2",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=f33c4e689163 line=f716cd2235ec",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=fd03bb1de571 line=7f56f9c1f5b6",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=f40544f63445 line=7403fa7c4bfd",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=e5a456f6d724 line=c3c14d767731",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=283e6ae3fd5e line=2ba37e7e6e65",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=4cf07e628119 line=efac6036021f",
  "topic 7": "pos=785.5,-496.5 size=126x68 order=0 group=4ccd92d47ffe line=2ded20e7a888",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=9fdc8e687fbb line=3d0050f48def",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=ab967bbf9230 line=7326c1f7aae2",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=32cf95af0d2b line=4a3df9b8f5d5",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=9aa0a3acfcac line=e98fdecaa0a1",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=430d922d4a34 line=da43145cd70e",
  "topic 8": "pos=825.5,-406 size=206x93 order=1 group=84e763850a88 line=88e1563d7e33",
  "topic 9": "pos=327,-255.5 size=159x125 order=1 group=d03aceb6b3e8 line=364c842ff415",
}
`;

exports[`redraw render snapshot of a medium map renders the same after changing the theme: prism dark 1`] = `
{
  "canvas": "3fd2211adf05",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=8e1842952861 line=da39a3ee5e6b",
  "topic 1": "pos=154.5,-358.5 size=126x68 order=0 group=46a0f173670d line=b9142a0a1086",
  "topic 10": "pos=572.5,-315.5 size=272x68 order=0 group=8c11dd31d7b3 line=968f6abeb8e8",
  "topic 11": "pos=496.5,-216.5 size=120x110 order=1 group=41edf4907b56 line=a7718b2a2e40",
  "topic 12": "pos=350.5,-78.5 size=206x93 order=2 group=e2464e218f0c line=69920694442e",
  "topic 13": "pos=688,-117.5 size=409x68 order=0 group=2f0fdd6d17e0 line=e51a91882dff",
  "topic 14": "pos=552,-39.5 size=137x68 order=1 group=f18c086f098c line=84083ecf625a",
  "topic 15": "pos=139.5,172.5 size=96x74 order=2 group=22487bb51633 line=421e767addc4",
  "topic 16": "pos=269.5,72 size=104x47 order=0 group=16e1e59c00d1 line=0d419d9e9e05",
  "topic 17": "pos=386,21.5 size=69x34 order=0 group=f9eac1831996 line=7eb4128d5606",
  "topic 18": "pos=403,94 size=103x34 order=1 group=80316a380d87 line=e5dd6bd49c2a",
  "topic 19": "pos=519,65.5 size=69x34 order=0 group=0dc328aa8a6d line=85eed995cfb5",
  "topic 2": "pos=375.5,-535.5 size=256x93 order=0 group=0aea8f34ca0a line=3e93580dbced",
  "topic 20": "pos=536.5,116 size=104x47 order=1 group=f4fe8a9a2a8e line=07a12b01dad8",
  "topic 21": "pos=252,201 size=69x34 order=1 group=a959d98ae3ca line=290664d25139",
  "topic 22": "pos=376.5,179 size=120x59 order=0 group=28bc970292a0 line=aca62d332791",
  "topic 23": "pos=419.5,235.5 size=206x34 order=1 group=6907da038f1f line=e21b1e96e064",
  "topic 24": "pos=278,301.5 size=121x47 order=2 group=46ad0fd694d3 line=cd1168174f68",
  "topic 25": "pos=411.5,279.5 size=86x34 order=0 group=c89085896e36 line=c95cb00573fc",
  "topic 26": "pos=403,323.5 size=69x34 order=1 group=80c685380ae2 line=e289e0937d23",
  "topic 27": "pos=139.5,531 size=96x38 order=4 group=2f62ffb27c18 line=9f143bb54c7a",
  "topic 28": "pos=261,418 size=87x47 order=0 group=dfac7b34cdc5 line=c3fb90afe50f",
  "topic 29": "pos=369,367.5 size=69x34 order=0 group=82305e0d00a4 line=61364c78af0c",
  "topic 3": "pos=673,-626 size=279x68 order=0 group=e28434fc5292 line=f6150b073ecf",
  "topic 30": "pos=386,440 size=103x34 order=1 group=eddca8169392 line=ec73dcb261d2",
  "topic 31": "pos=502,411.5 size=69x34 order=0 group=7a1c304e13cc line=69f6068708c0",
  "topic 32": "pos=519.5,462 size=104x47 order=1 group=d14c82564da1 line=6b7dee168238",
  "topic 33": "pos=396.5,559.5 size=358x59 order=1 group=3209b975ca3d line=5d02a44c3ca6",
  "topic 34": "pos=665.5,525 size=120x59 order=0 group=3ab35310575c line=da79c3585083",
  "topic 35": "pos=680.5,594 size=150x59 order=1 group=9f39c60a029a line=4a66281381f6",
  "topic 36": "pos=278,672.5 size=121x47 order=2 group=f9524e05e3f8 line=8a0fa9745219",
  "topic 37": "pos=403,650.5 size=69x34 order=0 group=138bbce65c0a line=5d52d00d9a67",
  "topic 38": "pos=403,694.5 size=69x34 order=1 group=bc47ff75babd line=1360e6e5a97f",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=021d35e5ffbf line=70c4aed10436",
  "topic 4": "pos=929,-665 size=173x93 order=0 group=b3602f7076d3 line=ed6ee8aa2003",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=7b4cafde4e5a line=49944b3c3657",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=fa43f37abb00 line=38314b6e3ea7",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=076ccf9f2012 line=6cfd3626abce",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=f698c731a865 line=01fb788ec80c",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=3c4759af98ff line=d2a05a7f2eb1",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=459a5fa47787 line=afb43a18230c",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=f9b9f6871125 line=0b07d4914ddd",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=1e884e147b29 line=3668449e3976",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=be4ec80358f2 line=daff7500560c",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=3107cd648556 line=6e0c3134ebcb",
  "topic 5": "pos=922,-574.5 size=159x68 order=1 group=8a1489883f03 line=fbe649c413b1",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=0ab6c43c35da line=134eaa37ff37",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=a79fe4d7b34b line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=dfa299e30a32 line=e74fa6ecbd6a",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=777d906bf00a line=2e573057fa16",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=eaaedde426dd line=6b48f5c5062f",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=3daf0a5905c0 line=2fb7416044d7",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=6550e95aaa89 line=33738c2aa05b",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=1ed4b75bb273 line=098ae7f1ed02",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=74bb08635ffd line=4765955ad45d",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=097950de3863 line=0525849dfa31",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=455460c827c7 line=03765c81a874",
  "topic 6": "pos=613,-445 size=159x68 order=1 group=66f6e7913a21 line=3636855e8b10",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=04579c9fc1a5 line=9229e4518179",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=e069cbdda80c line=bb3f095c8aec",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=7ec9b43b4d8b line=15abefdfbeea",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=acd5aeee5b5f line=f42fe57e407c",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=f7c51493b92e line=7210f9f81508",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=808723df9b5f line=1523987e8fd0",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=11e63d52b835 line=ae018dce30d9",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=be92944d536a line=8376ceb320ca",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=283e6ae3fd5e line=720c7cc8e055",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=77b80ba9058c line=aec3ebce9132",
  "topic 7": "pos=785.5,-496.5 size=126x68 order=0 group=4ccd92d47ffe line=ef59fb74b443",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=7cf11601a648 line=4ec8896bfea8",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=ef07a675dad6 line=dd9bc23b3722",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=c08a0c2d97a2 line=6128117fb497",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=bea895188d63 line=9e1561edd5ef",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=7fa7b5cd5cb1 line=e9902f21cdac",
  "topic 8": "pos=825.5,-406 size=206x93 order=1 group=dd01e7d9a2aa line=88c3a3ea4842",
  "topic 9": "pos=327,-255.5 size=159x125 order=1 group=20bd0e1a9a18 line=e781e88ee41c",
}
`;

exports[`redraw render snapshot of a medium map renders the same after style, feature and image changes: styled 1`] = `
{
  "canvas": "5e65821a4e3c",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=74ec918771de line=da39a3ee5e6b",
  "topic 1": "pos=154.5,-358.5 size=126x68 order=0 group=047f3b3311d0 line=ea72607da671",
  "topic 10": "pos=572.5,-315.5 size=272x68 order=0 group=e883f7ffebb2 line=44d42bcc4659",
  "topic 11": "pos=496.5,-216.5 size=120x110 order=1 group=4678b3683067 line=b3960e9d7a25",
  "topic 12": "pos=350.5,-78.5 size=206x93 order=2 group=1caf75c035d6 line=b8917e307fb8",
  "topic 13": "pos=688,-117.5 size=409x68 order=0 group=327709bfdef2 line=a69221b4ccb3",
  "topic 14": "pos=552,-39.5 size=137x68 order=1 group=782b1bc5fbbe line=53ce5d0d1fef",
  "topic 15": "pos=139.5,172.5 size=96x74 order=2 group=8832562dfbca line=bb9f58af2cd7",
  "topic 16": "pos=269.5,72 size=104x47 order=0 group=ff929a9e3e50 line=31abf6adfadc",
  "topic 17": "pos=386,21.5 size=69x34 order=0 group=984c6af9bcbf line=439de8e0d329",
  "topic 18": "pos=403,94 size=103x34 order=1 group=f59fecb6c9f0 line=04caab8fa80e",
  "topic 19": "pos=519,65.5 size=69x34 order=0 group=2a171f03cc75 line=a0bc28fc9c42",
  "topic 2": "pos=375.5,-535.5 size=256x93 order=0 group=024d41038d10 line=53be925adf6c",
  "topic 20": "pos=536.5,116 size=104x47 order=1 group=7ccfe45cdda7 line=ec2af31d615c",
  "topic 21": "pos=252,201 size=69x34 order=1 group=5da051fb5142 line=7470126bcd4a",
  "topic 22": "pos=376.5,179 size=120x59 order=0 group=d77b819bb0fe line=0275717883ba",
  "topic 23": "pos=419.5,235.5 size=206x34 order=1 group=cde64bdfb095 line=5bc57a636001",
  "topic 24": "pos=278,301.5 size=121x47 order=2 group=756b3272e812 line=e43c8256d7e6",
  "topic 25": "pos=411.5,279.5 size=86x34 order=0 group=f4c54cf9f827 line=120e1b3a44ff",
  "topic 26": "pos=403,323.5 size=69x34 order=1 group=a78ee07aab34 line=a3b016708bac",
  "topic 27": "pos=139.5,531 size=96x38 order=4 group=ea4fe7e468d8 line=5b2728d76718",
  "topic 28": "pos=261,418 size=87x47 order=0 group=fe9b0eb750c7 line=0705f95fceab",
  "topic 29": "pos=369,367.5 size=69x34 order=0 group=b8c83998dd68 line=1933b7aa020e",
  "topic 3": "pos=673,-626 size=279x68 order=0 group=14832032083d line=fe87412078b3",
  "topic 30": "pos=386,440 size=103x34 order=1 group=52b7b321e125 line=98389a5de5f2",
  "topic 31": "pos=502,411.5 size=69x34 order=0 group=990c589623c8 line=435e37030870",
  "topic 32": "pos=519.5,462 size=104x47 order=1 group=c90bf4967446 line=85fbf20f9704",
  "topic 33": "pos=396.5,559.5 size=358x59 order=1 group=a2aa08e587a1 line=af9aa6494024",
  "topic 34": "pos=665.5,525 size=120x59 order=0 group=c2ec6a6821c3 line=35b3b7362a50",
  "topic 35": "pos=680.5,594 size=150x59 order=1 group=4680c48cc699 line=ce666120d8e7",
  "topic 36": "pos=278,672.5 size=121x47 order=2 group=e1d51cc3ef8d line=f279df030683",
  "topic 37": "pos=403,650.5 size=69x34 order=0 group=a5bcf04900a1 line=7df17c9d7a36",
  "topic 38": "pos=403,694.5 size=69x34 order=1 group=9124ee2869a0 line=cf9ae6eb707e",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=0a2e6120e30d line=45ba77b9737c",
  "topic 4": "pos=929,-665 size=173x93 order=0 group=1a71b66bc215 line=d1c2e2b7dcfe",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=38ef46925c44 line=0ccc63e2c7dc",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=43fda77d9a37 line=05f1dcbbda4d",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=bbb252f69d2e line=653fa4771554",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=a6384dc24638 line=f76dfd7a4292",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=a5144deb8419 line=3523393064d4",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=7e3010a694bf line=191987e795ae",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=96990dd9f3a5 line=3f2b03aab15f",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=71dfbea60e7b line=0678529c2fe8",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=5d04acfcad0d line=3adedc430c7d",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=840dbf4d6a48 line=0310ad146aa2",
  "topic 5": "pos=922,-574.5 size=159x68 order=1 group=bb3c11a5d3ce line=ecb71c5eec4a",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=589607d66818 line=bd728387fd89",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=7773ea4733a6 line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=c83362bb5b1e line=d7362681835b",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=8ac003b9fe72 line=f7e49923978c",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=f2d87b486785 line=14dfd50bb3b0",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=37cf3ea9fe48 line=8d24bbd5a823",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=a27eaa49315b line=bcf978b99bf5",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=5b6663e6eea4 line=de9eeca9ab1e",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=41334d5408ad line=d54bfe9687c3",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=5d044b168b2d line=62f84db9acb3",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=1a18ed1ace73 line=d1b34dc5e4ad",
  "topic 6": "pos=613,-445 size=159x68 order=1 group=2dc3caa98e78 line=c8afcc84d5c9",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=cbe88b240537 line=16ab3beb3c16",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=1e5cc6e1d38d line=859c81c1cd05",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=224842915924 line=f9f71dd8fe5b",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=af2511baa3b8 line=8761c60f26b6",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=7c573952e83b line=37ede42beae8",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=58dec10bbed8 line=f2b6e580e209",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=46738580edd2 line=2283c269a934",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=1209376b7203 line=f84e6f8bc1ae",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=805cbf1cc553 line=1882af4c714e",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=0f6bd3c5a4f1 line=e926bbc52454",
  "topic 7": "pos=785.5,-496.5 size=126x68 order=0 group=3f48e9d9ebf6 line=d94e5668a077",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=3df498366217 line=3d0050f48def",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=2e46b712727a line=7326c1f7aae2",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=4e5540e5b5ab line=35a24638b9da",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=2e7d16d40b5c line=174629ac4be6",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=fdda0f57ae0a line=83694791f45f",
  "topic 8": "pos=825.5,-406 size=206x93 order=1 group=cf51f5830f1c line=9ef77734fbf4",
  "topic 9": "pos=327,-255.5 size=159x125 order=1 group=94fcafbc5d12 line=7b7dc20b5f03",
}
`;

exports[`redraw render snapshot of a medium map renders the same after switching to the tree layout and back: mindmap 1`] = `
{
  "canvas": "1daf6c910262",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=74ec918771de line=da39a3ee5e6b",
  "topic 1": "pos=127,-358.5 size=71x38 order=0 group=162c190a3cd4 line=14465d00ae9e",
  "topic 10": "pos=345.5,-336 size=86x34 order=0 group=a88d627b1c49 line=ca9c29b657b7",
  "topic 11": "pos=362.5,-279.5 size=120x59 order=1 group=d70271fc6d54 line=9f1a5678f79b",
  "topic 12": "pos=244.5,-201 size=104x47 order=2 group=56a8f8077ac9 line=3e2ab23edb2e",
  "topic 13": "pos=429.5,-223 size=206x34 order=0 group=5ad17c81c38e line=d1b8ffed00d3",
  "topic 14": "pos=361,-179 size=69x34 order=1 group=57929f33ee6f line=758c5d149d80",
  "topic 15": "pos=139.5,16 size=96x74 order=2 group=b6e50f592204 line=03a6e6620db5",
  "topic 16": "pos=269.5,-84.5 size=104x47 order=0 group=6407c1c61878 line=767619b58311",
  "topic 17": "pos=386,-135 size=69x34 order=0 group=605571ebe222 line=4d78b932a742",
  "topic 18": "pos=403,-62.5 size=103x34 order=1 group=c3dd72cff2d4 line=d06662285efa",
  "topic 19": "pos=519,-91 size=69x34 order=0 group=eacdb19e3756 line=72c7d3c8dbe0",
  "topic 2": "pos=224,-459 size=63x34 order=0 group=2dbb78a7acda line=4f503fe43297",
  "topic 20": "pos=536.5,-40.5 size=104x47 order=1 group=878c32d8c9b9 line=d92efb5af4d9",
  "topic 21": "pos=252,44.5 size=69x34 order=1 group=df8025cea0f9 line=2bc9e5eead1f",
  "topic 22": "pos=376.5,22.5 size=120x59 order=0 group=2af031a47c68 line=5039215cfb15",
  "topic 23": "pos=419.5,79 size=206x34 order=1 group=d7aa158bd1b4 line=c830aad267ad",
  "topic 24": "pos=278,145 size=121x47 order=2 group=4542b59b03de line=2cccfdf38c89",
  "topic 25": "pos=411.5,123 size=86x34 order=0 group=854859a6c92f line=4123f38c7cc2",
  "topic 26": "pos=403,167 size=69x34 order=1 group=4de9d8047618 line=24831b6a81e5",
  "topic 27": "pos=139.5,374.5 size=96x38 order=4 group=01eaee684db3 line=30959b29cc2d",
  "topic 28": "pos=261,261.5 size=87x47 order=0 group=42eb0b52b246 line=8468daa7ec17",
  "topic 29": "pos=369,211 size=69x34 order=0 group=da7fded5e0a1 line=5589d89e9146",
  "topic 3": "pos=385.5,-509.5 size=200x34 order=0 group=e26bd8ae0b06 line=ee43cfc7eb24",
  "topic 30": "pos=386,283.5 size=103x34 order=1 group=e80d4ba521c1 line=55a1f0a76e37",
  "topic 31": "pos=502,255 size=69x34 order=0 group=edde46e84a58 line=685aa3535c73",
  "topic 32": "pos=519.5,305.5 size=104x47 order=1 group=61557cd5730a line=919cf05b28d7",
  "topic 33": "pos=396.5,403 size=358x59 order=1 group=9baec966d295 line=a1bee726f585",
  "topic 34": "pos=665.5,368.5 size=120x59 order=0 group=345994db698a line=85362891b03b",
  "topic 35": "pos=680.5,437.5 size=150x59 order=1 group=d8b6c6744e7a line=eb24489f1833",
  "topic 36": "pos=278,516 size=121x47 order=2 group=afd68f0535cb line=b38b929a4296",
  "topic 37": "pos=403,494 size=69x34 order=0 group=9782420ea7a1 line=368f701524ea",
  "topic 38": "pos=403,538 size=69x34 order=1 group=abb95c3eeac3 line=ce8b2d07af90",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=0a2e6120e30d line=45ba77b9737c",
  "topic 4": "pos=559,-531.5 size=87x47 order=0 group=594787a38734 line=c4c37fa6db29",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=38ef46925c44 line=0ccc63e2c7dc",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=43fda77d9a37 line=05f1dcbbda4d",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=bbb252f69d2e line=653fa4771554",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=a6384dc24638 line=f76dfd7a4292",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=a5144deb8419 line=3523393064d4",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=7e3010a694bf line=191987e795ae",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=96990dd9f3a5 line=3f2b03aab15f",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=71dfbea60e7b line=0678529c2fe8",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=5d04acfcad0d line=3adedc430c7d",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=840dbf4d6a48 line=0310ad146aa2",
  "topic 5": "pos=555.5,-481 size=80x34 order=1 group=8dff3d9706b6 line=379f08a83b76",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=589607d66818 line=bd728387fd89",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=7773ea4733a6 line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=c83362bb5b1e line=d7362681835b",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=8ac003b9fe72 line=f7e49923978c",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=f2d87b486785 line=14dfd50bb3b0",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=37cf3ea9fe48 line=8d24bbd5a823",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=a27eaa49315b line=bcf978b99bf5",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=5b6663e6eea4 line=de9eeca9ab1e",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=41334d5408ad line=d54bfe9687c3",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=5d044b168b2d line=62f84db9acb3",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=1a18ed1ace73 line=d1b34dc5e4ad",
  "topic 6": "pos=325.5,-408.5 size=80x34 order=1 group=0530f0efef7d line=0b91bee6ed96",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=cbe88b240537 line=16ab3beb3c16",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=1e5cc6e1d38d line=859c81c1cd05",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=224842915924 line=f9f71dd8fe5b",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=af2511baa3b8 line=8761c60f26b6",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=7c573952e83b line=37ede42beae8",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=58dec10bbed8 line=f2b6e580e209",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=46738580edd2 line=2283c269a934",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=1209376b7203 line=f84e6f8bc1ae",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=805cbf1cc553 line=1882af4c714e",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=0f6bd3c5a4f1 line=e926bbc52454",
  "topic 7": "pos=427,-437 size=63x34 order=0 group=789b6423bad5 line=1de3ff0b54b2",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=3df498366217 line=3d0050f48def",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=2e46b712727a line=7326c1f7aae2",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=4e5540e5b5ab line=35a24638b9da",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=2e7d16d40b5c line=174629ac4be6",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=fdda0f57ae0a line=83694791f45f",
  "topic 8": "pos=447.5,-386.5 size=104x47 order=1 group=19d69327e257 line=52fab0052e24",
  "topic 9": "pos=232.5,-301.5 size=80x64 order=1 group=ba07ee830159 line=5de042427663",
}
`;

exports[`redraw render snapshot of a medium map renders the same after switching to the tree layout and back: tree 1`] = `
{
  "canvas": "e65c579d565f",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=74ec918771de line=da39a3ee5e6b",
  "topic 1": "pos=-2021.5,110 size=71x38 order=0 group=3945da139168 line=b387428a7c74",
  "topic 10": "pos=-2035.5,350 size=86x34 order=0 group=bf8cb20c4d55 line=7248c51e0a08",
  "topic 11": "pos=-1922.5,362.5 size=120x59 order=1 group=0b744c8afd1c line=764e35d62f5a",
  "topic 12": "pos=-1710,222.5 size=104x47 order=2 group=c01790da5803 line=5fc3eb1dc329",
  "topic 13": "pos=-1749.5,333 size=206x34 order=0 group=35bd82fd6162 line=6c57a7e5859d",
  "topic 14": "pos=-1602,333 size=69x34 order=1 group=3e9ccf08101c line=f1edcd7737c3",
  "topic 15": "pos=-1166,128 size=96x74 order=1 group=d1a282c5b1e8 line=0aec9ae5f5be",
  "topic 16": "pos=-1426.5,258.5 size=104x47 order=0 group=2b551a950d22 line=de0967e03c0e",
  "topic 17": "pos=-1523,369 size=69x34 order=0 group=d856ec8ad37c line=7bad59f6aae4",
  "topic 18": "pos=-1387,369 size=103x34 order=1 group=a88464cd062e line=3edb062e9c05",
  "topic 19": "pos=-1444,473 size=69x34 order=0 group=e06900eef8dd line=c0188ea49fe3",
  "topic 2": "pos=-2282,216 size=63x34 order=0 group=2e82e8c1e322 line=ab3082c12c48",
  "topic 20": "pos=-1347.5,479.5 size=104x47 order=1 group=8bb65e26b526 line=976cb7685ffa",
  "topic 21": "pos=-1117.5,252 size=69x34 order=1 group=5fe00ac6285f line=6c647af8d598",
  "topic 22": "pos=-1225.5,368.5 size=120x59 order=0 group=d43835f042c3 line=87ff9f3f946e",
  "topic 23": "pos=-1052.5,356 size=206x34 order=1 group=ed6a0dc1135d line=e7d44b058435",
  "topic 24": "pos=-857,258.5 size=121x47 order=2 group=dc4d90183a6f line=2ad38053367e",
  "topic 25": "pos=-896.5,369 size=86x34 order=0 group=adbb0c7026cd line=1d8a896fc03c",
  "topic 26": "pos=-809,369 size=69x34 order=1 group=c64b0dfbb0f5 line=308806477de6",
  "topic 27": "pos=-370.5,110 size=96x38 order=2 group=2518b616c818 line=ade0b69cf801",
  "topic 28": "pos=-633.5,222.5 size=87x47 order=0 group=ac2cff0771bd line=5bc6970221a6",
  "topic 29": "pos=-730,333 size=69x34 order=0 group=c28ac4ef94d3 line=ca3880112f36",
  "topic 3": "pos=-2375.5,320 size=200x34 order=0 group=bcd783d4c454 line=806a013ea535",
  "topic 30": "pos=-594,333 size=103x34 order=1 group=44b2b08974f3 line=baea5bed6d7a",
  "topic 31": "pos=-651,437 size=69x34 order=0 group=fda9c4e9f5e5 line=5a656919e0f8",
  "topic 32": "pos=-554.5,443.5 size=104x47 order=1 group=8694b10f470c line=282876f31ac3",
  "topic 33": "pos=-313.5,228.5 size=358x59 order=1 group=3196b23fce77 line=1f6ff2d0d5ec",
  "topic 34": "pos=-393.5,357.5 size=120x59 order=0 group=073efcf45b95 line=57833c7f141a",
  "topic 35": "pos=-248.5,357.5 size=150x59 order=1 group=e79ca99ba812 line=4e7fc4fa6dfd",
  "topic 36": "pos=-50.5,222.5 size=121x47 order=2 group=e0456bd72e2a line=e1f2a9e96974",
  "topic 37": "pos=-90,333 size=69x34 order=0 group=becaf8e038b7 line=f1a6f029fb03",
  "topic 38": "pos=-11,333 size=69x34 order=1 group=1bd72f3cfe47 line=85f728c61a17",
  "topic 39": "pos=423,110 size=78x38 order=3 group=63b86dd23abb line=26331795a9d1",
  "topic 4": "pos=-2420.5,430.5 size=87x47 order=0 group=b06d3432bdd4 line=3afb326c4a6f",
  "topic 40": "pos=256.5,222.5 size=121x47 order=0 group=1cc2f3c4ad77 line=00ac6c92d4b9",
  "topic 41": "pos=68,333 size=69x34 order=0 group=eab6482771bf line=5ee9e855b742",
  "topic 42": "pos=296,333 size=86x34 order=1 group=db2e0e01936f line=c59b4b7d4136",
  "topic 43": "pos=215.5,437 size=206x34 order=0 group=87e1c8244bb8 line=53e0734b0b83",
  "topic 44": "pos=404,461 size=151x82 order=1 group=a98290d4ede2 line=2a7b008f96a5",
  "topic 45": "pos=563.5,216 size=103x34 order=1 group=531179ecb9ec line=fe25863e0524",
  "topic 46": "pos=524,320 size=69x34 order=0 group=fb30d8a7c15f line=209b9550794e",
  "topic 47": "pos=603,320 size=69x34 order=1 group=f20ef75b9655 line=5c328592aed1",
  "topic 48": "pos=730,222.5 size=121x47 order=2 group=4ef5d17faadb line=507c3047fd3e",
  "topic 49": "pos=682,333 size=69x34 order=0 group=154dbdb1f28f line=b7ecc60d31b0",
  "topic 5": "pos=-2327,424 size=80x34 order=1 group=9da3323f5929 line=b0da76464c0d",
  "topic 50": "pos=769.5,333 size=86x34 order=1 group=6a6c278c67c1 line=65299b2e1c4a",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=7773ea4733a6 line=da39a3ee5e6b",
  "topic 51": "pos=1220.5,110 size=78x38 order=4 group=41ba84d9190d line=a7bd107c4c7a",
  "topic 52": "pos=1062.5,222.5 size=87x47 order=0 group=cdcd8f69b46a line=9d6d0ec09407",
  "topic 53": "pos=925.5,333 size=206x34 order=0 group=198f9048d8f0 line=2bc1e296b7a5",
  "topic 54": "pos=1170.5,333 size=103x34 order=1 group=a741a1edc9dd line=13d299ef7fcd",
  "topic 55": "pos=1113.5,449.5 size=150x59 order=0 group=3e32ce75ad3e line=ecd29eb2e247",
  "topic 56": "pos=1250.5,443.5 size=104x47 order=1 group=e9f707be90b9 line=fa5542e8509e",
  "topic 57": "pos=1386.5,216 size=69x34 order=1 group=4dc9f409fb10 line=e32da11e415d",
  "topic 58": "pos=1347,320 size=69x34 order=0 group=2c46b18526ee line=7136a715cda9",
  "topic 59": "pos=1426,320 size=69x34 order=1 group=a284f86421e7 line=0aa4c620aad0",
  "topic 6": "pos=-2177,320 size=80x34 order=1 group=6bbc68256035 line=d5034738f9d1",
  "topic 60": "pos=1544.5,222.5 size=121x47 order=2 group=1ec584f15a59 line=1a5792fa1be1",
  "topic 61": "pos=1505,333 size=69x34 order=0 group=4ea712227c5d line=24cd8210ac14",
  "topic 62": "pos=1584,333 size=69x34 order=1 group=ea2e17c0af4f line=e884ffd5cac8",
  "topic 63": "pos=2052,110 size=249x38 order=5 group=9c87c0f1aa2c line=068456021605",
  "topic 64": "pos=1817,222.5 size=104x47 order=0 group=485053964d15 line=04445ce5c0a1",
  "topic 65": "pos=1671.5,333 size=86x34 order=0 group=b0fca1447f0a line=c68b6a09b98a",
  "topic 66": "pos=1865,345.5 size=150x59 order=1 group=8f69d8654a3f line=833190f65104",
  "topic 67": "pos=1784.5,474.5 size=120x59 order=0 group=f890edf034e4 line=ce54b95cf48d",
  "topic 68": "pos=1930,486 size=151x82 order=1 group=435616a740b1 line=94737728c834",
  "topic 69": "pos=2098,216 size=69x34 order=1 group=50e2781b08d1 line=86d13f0d8eb3",
  "topic 7": "pos=-2234,424 size=63x34 order=0 group=91369b2c9bc7 line=682e073921a1",
  "topic 70": "pos=2058.5,320 size=86x34 order=0 group=11e524b73d79 line=82011f3fe755",
  "topic 71": "pos=2146,320 size=69x34 order=1 group=0c1af23bb192 line=123a0872e21d",
  "topic 72": "pos=2333,222.5 size=138x47 order=2 group=7ace8958b55a line=bb70d20a63cb",
  "topic 73": "pos=2293.5,333 size=206x34 order=0 group=ba7d88c46f11 line=5bf2c2889236",
  "topic 74": "pos=2441,333 size=69x34 order=1 group=8fce6b72d42a line=fdcf1b9143a6",
  "topic 8": "pos=-2140.5,430.5 size=104x47 order=1 group=b152ef8ccc6c line=35423a6cdb58",
  "topic 9": "pos=-1970.5,231 size=80x64 order=1 group=09ae139d29d7 line=a5c93956d121",
}
`;

exports[`redraw render snapshot of a medium map renders the same after toggling the theme variant: dark 1`] = `
{
  "canvas": "e398de619d00",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=74ec918771de line=da39a3ee5e6b",
  "topic 1": "pos=127,-358.5 size=71x38 order=0 group=d5a11872a573 line=14465d00ae9e",
  "topic 10": "pos=345.5,-336 size=86x34 order=0 group=c2d711d6f918 line=ca9c29b657b7",
  "topic 11": "pos=362.5,-279.5 size=120x59 order=1 group=d70271fc6d54 line=9f1a5678f79b",
  "topic 12": "pos=244.5,-201 size=104x47 order=2 group=00e350889b12 line=3e2ab23edb2e",
  "topic 13": "pos=429.5,-223 size=206x34 order=0 group=72bd2626e57d line=d1b8ffed00d3",
  "topic 14": "pos=361,-179 size=69x34 order=1 group=677489122f56 line=758c5d149d80",
  "topic 15": "pos=139.5,16 size=96x74 order=2 group=d91fcf24c6c0 line=03a6e6620db5",
  "topic 16": "pos=269.5,-84.5 size=104x47 order=0 group=26ccecc07ea5 line=767619b58311",
  "topic 17": "pos=386,-135 size=69x34 order=0 group=fb13d0aed60a line=4d78b932a742",
  "topic 18": "pos=403,-62.5 size=103x34 order=1 group=734b2774928d line=d06662285efa",
  "topic 19": "pos=519,-91 size=69x34 order=0 group=2c99427de17a line=72c7d3c8dbe0",
  "topic 2": "pos=224,-459 size=63x34 order=0 group=6dfea4b8e41a line=4f503fe43297",
  "topic 20": "pos=536.5,-40.5 size=104x47 order=1 group=b451307c92e9 line=d92efb5af4d9",
  "topic 21": "pos=252,44.5 size=69x34 order=1 group=df8025cea0f9 line=2bc9e5eead1f",
  "topic 22": "pos=376.5,22.5 size=120x59 order=0 group=2af031a47c68 line=5039215cfb15",
  "topic 23": "pos=419.5,79 size=206x34 order=1 group=d7aa158bd1b4 line=c830aad267ad",
  "topic 24": "pos=278,145 size=121x47 order=2 group=96e0828379e2 line=2cccfdf38c89",
  "topic 25": "pos=411.5,123 size=86x34 order=0 group=017fe0e1758b line=4123f38c7cc2",
  "topic 26": "pos=403,167 size=69x34 order=1 group=f06ff49c46d5 line=24831b6a81e5",
  "topic 27": "pos=139.5,374.5 size=96x38 order=4 group=361ac9fd0dc8 line=30959b29cc2d",
  "topic 28": "pos=261,261.5 size=87x47 order=0 group=23e286faee95 line=8468daa7ec17",
  "topic 29": "pos=369,211 size=69x34 order=0 group=c670efd3c86a line=5589d89e9146",
  "topic 3": "pos=385.5,-509.5 size=200x34 order=0 group=972327910a44 line=ee43cfc7eb24",
  "topic 30": "pos=386,283.5 size=103x34 order=1 group=8aa39e5906ec line=55a1f0a76e37",
  "topic 31": "pos=502,255 size=69x34 order=0 group=def95f051c97 line=685aa3535c73",
  "topic 32": "pos=519.5,305.5 size=104x47 order=1 group=289234da5bf9 line=919cf05b28d7",
  "topic 33": "pos=396.5,403 size=358x59 order=1 group=9baec966d295 line=a1bee726f585",
  "topic 34": "pos=665.5,368.5 size=120x59 order=0 group=345994db698a line=85362891b03b",
  "topic 35": "pos=680.5,437.5 size=150x59 order=1 group=d8b6c6744e7a line=eb24489f1833",
  "topic 36": "pos=278,516 size=121x47 order=2 group=d190505e013d line=b38b929a4296",
  "topic 37": "pos=403,494 size=69x34 order=0 group=e6321429a748 line=368f701524ea",
  "topic 38": "pos=403,538 size=69x34 order=1 group=f233e67eb597 line=ce8b2d07af90",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=2c60db1a54b0 line=45ba77b9737c",
  "topic 4": "pos=559,-531.5 size=87x47 order=0 group=550c957dd31c line=c4c37fa6db29",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=680753ec1af7 line=0ccc63e2c7dc",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=6fadb404fa10 line=05f1dcbbda4d",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=bbb252f69d2e line=653fa4771554",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=a6384dc24638 line=f76dfd7a4292",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=a5144deb8419 line=3523393064d4",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=c93ec6e32750 line=191987e795ae",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=bc442ec17ca1 line=3f2b03aab15f",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=15867c866a29 line=0678529c2fe8",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=25fc74247ce2 line=3adedc430c7d",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=37b765d5343a line=0310ad146aa2",
  "topic 5": "pos=555.5,-481 size=80x34 order=1 group=bb40ead8cb2f line=379f08a83b76",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=8257a36e98e2 line=bd728387fd89",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=37a02ed0dfc9 line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=9b104cffc775 line=d7362681835b",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=e5b4a46dd2f6 line=f7e49923978c",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=26595f8e7dba line=14dfd50bb3b0",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=0a5f6f6d6d3a line=8d24bbd5a823",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=a27eaa49315b line=bcf978b99bf5",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=5b6663e6eea4 line=de9eeca9ab1e",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=d55d26bd54c8 line=d54bfe9687c3",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=f758331ee577 line=62f84db9acb3",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=90eae71f1ae0 line=d1b34dc5e4ad",
  "topic 6": "pos=325.5,-408.5 size=80x34 order=1 group=8104d0c3f762 line=0b91bee6ed96",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=3e34732504b0 line=16ab3beb3c16",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=5a5490f00ebb line=859c81c1cd05",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=43fd3a079800 line=f9f71dd8fe5b",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=b11a61901338 line=8761c60f26b6",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=e44c6c10908a line=37ede42beae8",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=9874d5915ac2 line=f2b6e580e209",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=46738580edd2 line=2283c269a934",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=1209376b7203 line=f84e6f8bc1ae",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=805cbf1cc553 line=1882af4c714e",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=98402f03d2ff line=e926bbc52454",
  "topic 7": "pos=427,-437 size=63x34 order=0 group=789b6423bad5 line=1de3ff0b54b2",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=3df498366217 line=3d0050f48def",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=70057924ecbf line=7326c1f7aae2",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=7dd19966bcbb line=35a24638b9da",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=65309e1226d4 line=174629ac4be6",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=47294b351e1c line=83694791f45f",
  "topic 8": "pos=447.5,-386.5 size=104x47 order=1 group=ab672c8e941d line=52fab0052e24",
  "topic 9": "pos=232.5,-301.5 size=80x64 order=1 group=a7c610d14172 line=5de042427663",
}
`;

exports[`redraw render snapshot of a medium map renders the same after toggling the theme variant: initialized dark 1`] = `
{
  "canvas": "e398de619d00",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=74ec918771de line=da39a3ee5e6b",
  "topic 1": "pos=127,-358.5 size=71x38 order=0 group=d5a11872a573 line=14465d00ae9e",
  "topic 10": "pos=345.5,-336 size=86x34 order=0 group=c2d711d6f918 line=ca9c29b657b7",
  "topic 11": "pos=362.5,-279.5 size=120x59 order=1 group=d70271fc6d54 line=9f1a5678f79b",
  "topic 12": "pos=244.5,-201 size=104x47 order=2 group=00e350889b12 line=3e2ab23edb2e",
  "topic 13": "pos=429.5,-223 size=206x34 order=0 group=72bd2626e57d line=d1b8ffed00d3",
  "topic 14": "pos=361,-179 size=69x34 order=1 group=677489122f56 line=758c5d149d80",
  "topic 15": "pos=139.5,16 size=96x74 order=2 group=d91fcf24c6c0 line=03a6e6620db5",
  "topic 16": "pos=269.5,-84.5 size=104x47 order=0 group=26ccecc07ea5 line=767619b58311",
  "topic 17": "pos=386,-135 size=69x34 order=0 group=fb13d0aed60a line=4d78b932a742",
  "topic 18": "pos=403,-62.5 size=103x34 order=1 group=734b2774928d line=d06662285efa",
  "topic 19": "pos=519,-91 size=69x34 order=0 group=2c99427de17a line=72c7d3c8dbe0",
  "topic 2": "pos=224,-459 size=63x34 order=0 group=6dfea4b8e41a line=4f503fe43297",
  "topic 20": "pos=536.5,-40.5 size=104x47 order=1 group=b451307c92e9 line=d92efb5af4d9",
  "topic 21": "pos=252,44.5 size=69x34 order=1 group=df8025cea0f9 line=2bc9e5eead1f",
  "topic 22": "pos=376.5,22.5 size=120x59 order=0 group=2af031a47c68 line=5039215cfb15",
  "topic 23": "pos=419.5,79 size=206x34 order=1 group=d7aa158bd1b4 line=c830aad267ad",
  "topic 24": "pos=278,145 size=121x47 order=2 group=96e0828379e2 line=2cccfdf38c89",
  "topic 25": "pos=411.5,123 size=86x34 order=0 group=017fe0e1758b line=4123f38c7cc2",
  "topic 26": "pos=403,167 size=69x34 order=1 group=f06ff49c46d5 line=24831b6a81e5",
  "topic 27": "pos=139.5,374.5 size=96x38 order=4 group=361ac9fd0dc8 line=30959b29cc2d",
  "topic 28": "pos=261,261.5 size=87x47 order=0 group=23e286faee95 line=8468daa7ec17",
  "topic 29": "pos=369,211 size=69x34 order=0 group=c670efd3c86a line=5589d89e9146",
  "topic 3": "pos=385.5,-509.5 size=200x34 order=0 group=972327910a44 line=ee43cfc7eb24",
  "topic 30": "pos=386,283.5 size=103x34 order=1 group=8aa39e5906ec line=55a1f0a76e37",
  "topic 31": "pos=502,255 size=69x34 order=0 group=def95f051c97 line=685aa3535c73",
  "topic 32": "pos=519.5,305.5 size=104x47 order=1 group=289234da5bf9 line=919cf05b28d7",
  "topic 33": "pos=396.5,403 size=358x59 order=1 group=9baec966d295 line=a1bee726f585",
  "topic 34": "pos=665.5,368.5 size=120x59 order=0 group=345994db698a line=85362891b03b",
  "topic 35": "pos=680.5,437.5 size=150x59 order=1 group=d8b6c6744e7a line=eb24489f1833",
  "topic 36": "pos=278,516 size=121x47 order=2 group=d190505e013d line=b38b929a4296",
  "topic 37": "pos=403,494 size=69x34 order=0 group=e6321429a748 line=368f701524ea",
  "topic 38": "pos=403,538 size=69x34 order=1 group=f233e67eb597 line=ce8b2d07af90",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=2c60db1a54b0 line=45ba77b9737c",
  "topic 4": "pos=559,-531.5 size=87x47 order=0 group=550c957dd31c line=c4c37fa6db29",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=680753ec1af7 line=0ccc63e2c7dc",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=6fadb404fa10 line=05f1dcbbda4d",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=bbb252f69d2e line=653fa4771554",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=a6384dc24638 line=f76dfd7a4292",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=a5144deb8419 line=3523393064d4",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=c93ec6e32750 line=191987e795ae",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=bc442ec17ca1 line=3f2b03aab15f",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=15867c866a29 line=0678529c2fe8",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=25fc74247ce2 line=3adedc430c7d",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=37b765d5343a line=0310ad146aa2",
  "topic 5": "pos=555.5,-481 size=80x34 order=1 group=bb40ead8cb2f line=379f08a83b76",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=8257a36e98e2 line=bd728387fd89",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=37a02ed0dfc9 line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=9b104cffc775 line=d7362681835b",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=e5b4a46dd2f6 line=f7e49923978c",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=26595f8e7dba line=14dfd50bb3b0",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=0a5f6f6d6d3a line=8d24bbd5a823",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=a27eaa49315b line=bcf978b99bf5",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=5b6663e6eea4 line=de9eeca9ab1e",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=d55d26bd54c8 line=d54bfe9687c3",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=f758331ee577 line=62f84db9acb3",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=90eae71f1ae0 line=d1b34dc5e4ad",
  "topic 6": "pos=325.5,-408.5 size=80x34 order=1 group=8104d0c3f762 line=0b91bee6ed96",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=3e34732504b0 line=16ab3beb3c16",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=5a5490f00ebb line=859c81c1cd05",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=43fd3a079800 line=f9f71dd8fe5b",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=b11a61901338 line=8761c60f26b6",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=e44c6c10908a line=37ede42beae8",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=9874d5915ac2 line=f2b6e580e209",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=46738580edd2 line=2283c269a934",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=1209376b7203 line=f84e6f8bc1ae",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=805cbf1cc553 line=1882af4c714e",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=98402f03d2ff line=e926bbc52454",
  "topic 7": "pos=427,-437 size=63x34 order=0 group=789b6423bad5 line=1de3ff0b54b2",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=3df498366217 line=3d0050f48def",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=70057924ecbf line=7326c1f7aae2",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=7dd19966bcbb line=35a24638b9da",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=65309e1226d4 line=174629ac4be6",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=47294b351e1c line=83694791f45f",
  "topic 8": "pos=447.5,-386.5 size=104x47 order=1 group=ab672c8e941d line=52fab0052e24",
  "topic 9": "pos=232.5,-301.5 size=80x64 order=1 group=a7c610d14172 line=5de042427663",
}
`;

exports[`redraw render snapshot of a medium map renders the same after toggling the theme variant: light 1`] = `
{
  "canvas": "1daf6c910262",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=74ec918771de line=da39a3ee5e6b",
  "topic 1": "pos=127,-358.5 size=71x38 order=0 group=162c190a3cd4 line=14465d00ae9e",
  "topic 10": "pos=345.5,-336 size=86x34 order=0 group=a88d627b1c49 line=ca9c29b657b7",
  "topic 11": "pos=362.5,-279.5 size=120x59 order=1 group=d70271fc6d54 line=9f1a5678f79b",
  "topic 12": "pos=244.5,-201 size=104x47 order=2 group=56a8f8077ac9 line=3e2ab23edb2e",
  "topic 13": "pos=429.5,-223 size=206x34 order=0 group=5ad17c81c38e line=d1b8ffed00d3",
  "topic 14": "pos=361,-179 size=69x34 order=1 group=57929f33ee6f line=758c5d149d80",
  "topic 15": "pos=139.5,16 size=96x74 order=2 group=b6e50f592204 line=03a6e6620db5",
  "topic 16": "pos=269.5,-84.5 size=104x47 order=0 group=6407c1c61878 line=767619b58311",
  "topic 17": "pos=386,-135 size=69x34 order=0 group=605571ebe222 line=4d78b932a742",
  "topic 18": "pos=403,-62.5 size=103x34 order=1 group=c3dd72cff2d4 line=d06662285efa",
  "topic 19": "pos=519,-91 size=69x34 order=0 group=eacdb19e3756 line=72c7d3c8dbe0",
  "topic 2": "pos=224,-459 size=63x34 order=0 group=2dbb78a7acda line=4f503fe43297",
  "topic 20": "pos=536.5,-40.5 size=104x47 order=1 group=878c32d8c9b9 line=d92efb5af4d9",
  "topic 21": "pos=252,44.5 size=69x34 order=1 group=df8025cea0f9 line=2bc9e5eead1f",
  "topic 22": "pos=376.5,22.5 size=120x59 order=0 group=2af031a47c68 line=5039215cfb15",
  "topic 23": "pos=419.5,79 size=206x34 order=1 group=d7aa158bd1b4 line=c830aad267ad",
  "topic 24": "pos=278,145 size=121x47 order=2 group=4542b59b03de line=2cccfdf38c89",
  "topic 25": "pos=411.5,123 size=86x34 order=0 group=854859a6c92f line=4123f38c7cc2",
  "topic 26": "pos=403,167 size=69x34 order=1 group=4de9d8047618 line=24831b6a81e5",
  "topic 27": "pos=139.5,374.5 size=96x38 order=4 group=01eaee684db3 line=30959b29cc2d",
  "topic 28": "pos=261,261.5 size=87x47 order=0 group=42eb0b52b246 line=8468daa7ec17",
  "topic 29": "pos=369,211 size=69x34 order=0 group=da7fded5e0a1 line=5589d89e9146",
  "topic 3": "pos=385.5,-509.5 size=200x34 order=0 group=e26bd8ae0b06 line=ee43cfc7eb24",
  "topic 30": "pos=386,283.5 size=103x34 order=1 group=e80d4ba521c1 line=55a1f0a76e37",
  "topic 31": "pos=502,255 size=69x34 order=0 group=edde46e84a58 line=685aa3535c73",
  "topic 32": "pos=519.5,305.5 size=104x47 order=1 group=61557cd5730a line=919cf05b28d7",
  "topic 33": "pos=396.5,403 size=358x59 order=1 group=9baec966d295 line=a1bee726f585",
  "topic 34": "pos=665.5,368.5 size=120x59 order=0 group=345994db698a line=85362891b03b",
  "topic 35": "pos=680.5,437.5 size=150x59 order=1 group=d8b6c6744e7a line=eb24489f1833",
  "topic 36": "pos=278,516 size=121x47 order=2 group=afd68f0535cb line=b38b929a4296",
  "topic 37": "pos=403,494 size=69x34 order=0 group=9782420ea7a1 line=368f701524ea",
  "topic 38": "pos=403,538 size=69x34 order=1 group=abb95c3eeac3 line=ce8b2d07af90",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=0a2e6120e30d line=45ba77b9737c",
  "topic 4": "pos=559,-531.5 size=87x47 order=0 group=594787a38734 line=c4c37fa6db29",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=38ef46925c44 line=0ccc63e2c7dc",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=43fda77d9a37 line=05f1dcbbda4d",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=bbb252f69d2e line=653fa4771554",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=a6384dc24638 line=f76dfd7a4292",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=a5144deb8419 line=3523393064d4",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=7e3010a694bf line=191987e795ae",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=96990dd9f3a5 line=3f2b03aab15f",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=71dfbea60e7b line=0678529c2fe8",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=5d04acfcad0d line=3adedc430c7d",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=840dbf4d6a48 line=0310ad146aa2",
  "topic 5": "pos=555.5,-481 size=80x34 order=1 group=8dff3d9706b6 line=379f08a83b76",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=589607d66818 line=bd728387fd89",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=7773ea4733a6 line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=c83362bb5b1e line=d7362681835b",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=8ac003b9fe72 line=f7e49923978c",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=f2d87b486785 line=14dfd50bb3b0",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=37cf3ea9fe48 line=8d24bbd5a823",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=a27eaa49315b line=bcf978b99bf5",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=5b6663e6eea4 line=de9eeca9ab1e",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=41334d5408ad line=d54bfe9687c3",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=5d044b168b2d line=62f84db9acb3",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=1a18ed1ace73 line=d1b34dc5e4ad",
  "topic 6": "pos=325.5,-408.5 size=80x34 order=1 group=0530f0efef7d line=0b91bee6ed96",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=cbe88b240537 line=16ab3beb3c16",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=1e5cc6e1d38d line=859c81c1cd05",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=224842915924 line=f9f71dd8fe5b",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=af2511baa3b8 line=8761c60f26b6",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=7c573952e83b line=37ede42beae8",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=58dec10bbed8 line=f2b6e580e209",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=46738580edd2 line=2283c269a934",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=1209376b7203 line=f84e6f8bc1ae",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=805cbf1cc553 line=1882af4c714e",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=0f6bd3c5a4f1 line=e926bbc52454",
  "topic 7": "pos=427,-437 size=63x34 order=0 group=789b6423bad5 line=1de3ff0b54b2",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=3df498366217 line=3d0050f48def",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=2e46b712727a line=7326c1f7aae2",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=4e5540e5b5ab line=35a24638b9da",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=2e7d16d40b5c line=174629ac4be6",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=fdda0f57ae0a line=83694791f45f",
  "topic 8": "pos=447.5,-386.5 size=104x47 order=1 group=19d69327e257 line=52fab0052e24",
  "topic 9": "pos=232.5,-301.5 size=80x64 order=1 group=ba07ee830159 line=5de042427663",
}
`;

exports[`redraw render snapshot of a medium map renders the same while typing in the text editor and after committing: committed 1`] = `
{
  "canvas": "12fae89b5889",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=74ec918771de line=da39a3ee5e6b",
  "topic 1": "pos=127,-358.5 size=71x38 order=0 group=162c190a3cd4 line=14465d00ae9e",
  "topic 10": "pos=345.5,-336 size=86x34 order=0 group=a88d627b1c49 line=ca9c29b657b7",
  "topic 11": "pos=362.5,-279.5 size=120x59 order=1 group=d70271fc6d54 line=9f1a5678f79b",
  "topic 12": "pos=244.5,-201 size=104x47 order=2 group=56a8f8077ac9 line=3e2ab23edb2e",
  "topic 13": "pos=429.5,-223 size=206x34 order=0 group=5ad17c81c38e line=d1b8ffed00d3",
  "topic 14": "pos=361,-179 size=69x34 order=1 group=57929f33ee6f line=758c5d149d80",
  "topic 15": "pos=139.5,16 size=96x74 order=2 group=b6e50f592204 line=03a6e6620db5",
  "topic 16": "pos=269.5,-84.5 size=104x47 order=0 group=6407c1c61878 line=767619b58311",
  "topic 17": "pos=386,-135 size=69x34 order=0 group=605571ebe222 line=4d78b932a742",
  "topic 18": "pos=403,-62.5 size=103x34 order=1 group=c3dd72cff2d4 line=d06662285efa",
  "topic 19": "pos=519,-91 size=69x34 order=0 group=eacdb19e3756 line=72c7d3c8dbe0",
  "topic 2": "pos=257,-459 size=129x47 order=0 group=a354156e9cbf line=b872fd9b123b",
  "topic 20": "pos=536.5,-40.5 size=104x47 order=1 group=878c32d8c9b9 line=d92efb5af4d9",
  "topic 21": "pos=252,44.5 size=69x34 order=1 group=df8025cea0f9 line=2bc9e5eead1f",
  "topic 22": "pos=376.5,22.5 size=120x59 order=0 group=2af031a47c68 line=5039215cfb15",
  "topic 23": "pos=419.5,79 size=206x34 order=1 group=d7aa158bd1b4 line=c830aad267ad",
  "topic 24": "pos=278,145 size=121x47 order=2 group=4542b59b03de line=2cccfdf38c89",
  "topic 25": "pos=411.5,123 size=86x34 order=0 group=854859a6c92f line=4123f38c7cc2",
  "topic 26": "pos=403,167 size=69x34 order=1 group=4de9d8047618 line=24831b6a81e5",
  "topic 27": "pos=139.5,374.5 size=96x38 order=4 group=01eaee684db3 line=30959b29cc2d",
  "topic 28": "pos=261,261.5 size=87x47 order=0 group=42eb0b52b246 line=8468daa7ec17",
  "topic 29": "pos=369,211 size=69x34 order=0 group=da7fded5e0a1 line=5589d89e9146",
  "topic 3": "pos=451.5,-509.5 size=200x34 order=0 group=48258c413917 line=528ddc0585e1",
  "topic 30": "pos=386,283.5 size=103x34 order=1 group=e80d4ba521c1 line=55a1f0a76e37",
  "topic 31": "pos=502,255 size=69x34 order=0 group=edde46e84a58 line=685aa3535c73",
  "topic 32": "pos=519.5,305.5 size=104x47 order=1 group=61557cd5730a line=919cf05b28d7",
  "topic 33": "pos=396.5,403 size=358x59 order=1 group=9baec966d295 line=a1bee726f585",
  "topic 34": "pos=665.5,368.5 size=120x59 order=0 group=345994db698a line=85362891b03b",
  "topic 35": "pos=680.5,437.5 size=150x59 order=1 group=d8b6c6744e7a line=eb24489f1833",
  "topic 36": "pos=278,516 size=121x47 order=2 group=afd68f0535cb line=b38b929a4296",
  "topic 37": "pos=403,494 size=69x34 order=0 group=9782420ea7a1 line=368f701524ea",
  "topic 38": "pos=403,538 size=69x34 order=1 group=abb95c3eeac3 line=ce8b2d07af90",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=0a2e6120e30d line=45ba77b9737c",
  "topic 4": "pos=625,-531.5 size=87x47 order=0 group=ef41373bb3b7 line=702854e2b9f5",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=38ef46925c44 line=0ccc63e2c7dc",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=43fda77d9a37 line=05f1dcbbda4d",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=bbb252f69d2e line=653fa4771554",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=a6384dc24638 line=f76dfd7a4292",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=a5144deb8419 line=3523393064d4",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=7e3010a694bf line=191987e795ae",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=96990dd9f3a5 line=3f2b03aab15f",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=71dfbea60e7b line=0678529c2fe8",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=5d04acfcad0d line=3adedc430c7d",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=840dbf4d6a48 line=0310ad146aa2",
  "topic 5": "pos=621.5,-481 size=80x34 order=1 group=a8b9d24e205e line=6faca698a2d3",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=589607d66818 line=bd728387fd89",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=7773ea4733a6 line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=c83362bb5b1e line=d7362681835b",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=8ac003b9fe72 line=f7e49923978c",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=f2d87b486785 line=14dfd50bb3b0",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=37cf3ea9fe48 line=8d24bbd5a823",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=a27eaa49315b line=bcf978b99bf5",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=5b6663e6eea4 line=de9eeca9ab1e",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=41334d5408ad line=d54bfe9687c3",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=5d044b168b2d line=62f84db9acb3",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=1a18ed1ace73 line=d1b34dc5e4ad",
  "topic 6": "pos=391.5,-408.5 size=80x34 order=1 group=1e3b58429f45 line=f8a23a292792",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=cbe88b240537 line=16ab3beb3c16",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=1e5cc6e1d38d line=859c81c1cd05",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=224842915924 line=f9f71dd8fe5b",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=af2511baa3b8 line=8761c60f26b6",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=7c573952e83b line=37ede42beae8",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=58dec10bbed8 line=f2b6e580e209",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=46738580edd2 line=2283c269a934",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=1209376b7203 line=f84e6f8bc1ae",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=805cbf1cc553 line=1882af4c714e",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=0f6bd3c5a4f1 line=e926bbc52454",
  "topic 7": "pos=493,-437 size=63x34 order=0 group=567193521470 line=36449079b3be",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=3df498366217 line=3d0050f48def",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=2e46b712727a line=7326c1f7aae2",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=4e5540e5b5ab line=35a24638b9da",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=2e7d16d40b5c line=174629ac4be6",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=fdda0f57ae0a line=83694791f45f",
  "topic 8": "pos=513.5,-386.5 size=104x47 order=1 group=b45de0148cf1 line=80ec675c725d",
  "topic 9": "pos=232.5,-301.5 size=80x64 order=1 group=ba07ee830159 line=5de042427663",
}
`;

exports[`redraw render snapshot of a medium map renders the same while typing in the text editor and after committing: typing 1`] = `
{
  "canvas": "617ef8903dfb",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=74ec918771de line=da39a3ee5e6b",
  "topic 1": "pos=127,-358.5 size=71x38 order=0 group=162c190a3cd4 line=14465d00ae9e",
  "topic 10": "pos=345.5,-336 size=86x34 order=0 group=a88d627b1c49 line=ca9c29b657b7",
  "topic 11": "pos=362.5,-279.5 size=120x59 order=1 group=d70271fc6d54 line=9f1a5678f79b",
  "topic 12": "pos=244.5,-201 size=104x47 order=2 group=56a8f8077ac9 line=3e2ab23edb2e",
  "topic 13": "pos=429.5,-223 size=206x34 order=0 group=5ad17c81c38e line=d1b8ffed00d3",
  "topic 14": "pos=361,-179 size=69x34 order=1 group=57929f33ee6f line=758c5d149d80",
  "topic 15": "pos=139.5,16 size=96x74 order=2 group=b6e50f592204 line=03a6e6620db5",
  "topic 16": "pos=269.5,-84.5 size=104x47 order=0 group=6407c1c61878 line=767619b58311",
  "topic 17": "pos=386,-135 size=69x34 order=0 group=605571ebe222 line=4d78b932a742",
  "topic 18": "pos=403,-62.5 size=103x34 order=1 group=c3dd72cff2d4 line=d06662285efa",
  "topic 19": "pos=519,-91 size=69x34 order=0 group=eacdb19e3756 line=72c7d3c8dbe0",
  "topic 2": "pos=257,-459 size=129x47 order=0 group=f64977e7f60a line=b872fd9b123b",
  "topic 20": "pos=536.5,-40.5 size=104x47 order=1 group=878c32d8c9b9 line=d92efb5af4d9",
  "topic 21": "pos=252,44.5 size=69x34 order=1 group=df8025cea0f9 line=2bc9e5eead1f",
  "topic 22": "pos=376.5,22.5 size=120x59 order=0 group=2af031a47c68 line=5039215cfb15",
  "topic 23": "pos=419.5,79 size=206x34 order=1 group=d7aa158bd1b4 line=c830aad267ad",
  "topic 24": "pos=278,145 size=121x47 order=2 group=4542b59b03de line=2cccfdf38c89",
  "topic 25": "pos=411.5,123 size=86x34 order=0 group=854859a6c92f line=4123f38c7cc2",
  "topic 26": "pos=403,167 size=69x34 order=1 group=4de9d8047618 line=24831b6a81e5",
  "topic 27": "pos=139.5,374.5 size=96x38 order=4 group=01eaee684db3 line=30959b29cc2d",
  "topic 28": "pos=261,261.5 size=87x47 order=0 group=42eb0b52b246 line=8468daa7ec17",
  "topic 29": "pos=369,211 size=69x34 order=0 group=da7fded5e0a1 line=5589d89e9146",
  "topic 3": "pos=451.5,-509.5 size=200x34 order=0 group=48258c413917 line=528ddc0585e1",
  "topic 30": "pos=386,283.5 size=103x34 order=1 group=e80d4ba521c1 line=55a1f0a76e37",
  "topic 31": "pos=502,255 size=69x34 order=0 group=edde46e84a58 line=685aa3535c73",
  "topic 32": "pos=519.5,305.5 size=104x47 order=1 group=61557cd5730a line=919cf05b28d7",
  "topic 33": "pos=396.5,403 size=358x59 order=1 group=9baec966d295 line=a1bee726f585",
  "topic 34": "pos=665.5,368.5 size=120x59 order=0 group=345994db698a line=85362891b03b",
  "topic 35": "pos=680.5,437.5 size=150x59 order=1 group=d8b6c6744e7a line=eb24489f1833",
  "topic 36": "pos=278,516 size=121x47 order=2 group=afd68f0535cb line=b38b929a4296",
  "topic 37": "pos=403,494 size=69x34 order=0 group=9782420ea7a1 line=368f701524ea",
  "topic 38": "pos=403,538 size=69x34 order=1 group=abb95c3eeac3 line=ce8b2d07af90",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=0a2e6120e30d line=45ba77b9737c",
  "topic 4": "pos=625,-531.5 size=87x47 order=0 group=ef41373bb3b7 line=702854e2b9f5",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=38ef46925c44 line=0ccc63e2c7dc",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=43fda77d9a37 line=05f1dcbbda4d",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=bbb252f69d2e line=653fa4771554",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=a6384dc24638 line=f76dfd7a4292",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=a5144deb8419 line=3523393064d4",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=7e3010a694bf line=191987e795ae",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=96990dd9f3a5 line=3f2b03aab15f",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=71dfbea60e7b line=0678529c2fe8",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=5d04acfcad0d line=3adedc430c7d",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=840dbf4d6a48 line=0310ad146aa2",
  "topic 5": "pos=621.5,-481 size=80x34 order=1 group=a8b9d24e205e line=6faca698a2d3",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=589607d66818 line=bd728387fd89",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=7773ea4733a6 line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=c83362bb5b1e line=d7362681835b",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=8ac003b9fe72 line=f7e49923978c",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=f2d87b486785 line=14dfd50bb3b0",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=37cf3ea9fe48 line=8d24bbd5a823",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=a27eaa49315b line=bcf978b99bf5",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=5b6663e6eea4 line=de9eeca9ab1e",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=41334d5408ad line=d54bfe9687c3",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=5d044b168b2d line=62f84db9acb3",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=1a18ed1ace73 line=d1b34dc5e4ad",
  "topic 6": "pos=391.5,-408.5 size=80x34 order=1 group=1e3b58429f45 line=f8a23a292792",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=cbe88b240537 line=16ab3beb3c16",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=1e5cc6e1d38d line=859c81c1cd05",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=224842915924 line=f9f71dd8fe5b",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=af2511baa3b8 line=8761c60f26b6",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=7c573952e83b line=37ede42beae8",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=58dec10bbed8 line=f2b6e580e209",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=46738580edd2 line=2283c269a934",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=1209376b7203 line=f84e6f8bc1ae",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=805cbf1cc553 line=1882af4c714e",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=0f6bd3c5a4f1 line=e926bbc52454",
  "topic 7": "pos=493,-437 size=63x34 order=0 group=567193521470 line=36449079b3be",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=3df498366217 line=3d0050f48def",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=2e46b712727a line=7326c1f7aae2",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=4e5540e5b5ab line=35a24638b9da",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=2e7d16d40b5c line=174629ac4be6",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=fdda0f57ae0a line=83694791f45f",
  "topic 8": "pos=513.5,-386.5 size=104x47 order=1 group=b45de0148cf1 line=80ec675c725d",
  "topic 9": "pos=232.5,-301.5 size=80x64 order=1 group=ba07ee830159 line=5de042427663",
}
`;
